--- a/Notepad.EntityFramework/Notepad.EntityFramework.csproj
+++ b/Notepad.EntityFramework/Notepad.EntityFramework.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="SequentialGuidGenerator" Version="1.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Notepad.Domain\Notepad.Domain.csproj" />
+    <ProjectReference Include="..\Notepad.Utilities\Notepad.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
