--- a/Notepad.Service/Notepad.Service.csproj
+++ b/Notepad.Service/Notepad.Service.csproj
@@ -4,4 +4,16 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Users\Dtos" />
+    <Folder Include="Users\Mapper" />
+    <Folder Include="Users\Validations" />
+  </ItemGroup>
+
 </Project>
