--- a/Notepad.Utilities/Notepad.Utilities.csproj
+++ b/Notepad.Utilities/Notepad.Utilities.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
+    <PackageReference Include="PasswordHashing" Version="2.0.1" />
+    <PackageReference Include="Slugify.Core" Version="3.0.0" />
+  </ItemGroup>
+
 </Project>
