--- a/Notepad.Service/Notepad.Service.csproj
+++ b/Notepad.Service/Notepad.Service.csproj
@@ -7,13 +7,18 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="FluentValidation" Version="10.3.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Users\Dtos" />
-    <Folder Include="Users\Mapper" />
-    <Folder Include="Users\Validations" />
+    <ProjectReference Include="..\Notepad.Auth\Notepad.Auth.csproj" />
+    <ProjectReference Include="..\Notepad.Dapper\Notepad.Dapper.csproj" />
+    <ProjectReference Include="..\Notepad.Repository\Notepad.Repository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="NoteCategories\Dtos\Inputs" />
   </ItemGroup>
 
 </Project>
